tests/sema/fail/v5_fail_struct_uninitialized.ep
# COMPILE_FAIL: struct variable requires explicit initialization
struct Box {
    value: i64
}

fun main(): void {
    let b: Box
}
